istio/gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: sockshop
  namespace: prodution
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      subset: v2
      name: http
      protocol: HTTP
    hosts:
    - "*"
